objects/AMX_Distribution_Log__c.object
<CustomObject>
    <fields>
        <fullName>AMX_Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the AMX Distributor that handled the specific record assignment being logged.</description>
        <label>Distributor</label>
        <referenceTo>AMX_Distributor__c</referenceTo>
        <relationshipLabel>Distribution Logs</relationshipLabel>
        <relationshipName>AMX_Distribution_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Object_Type__c</fullName>
        <description>Name of the type of SObject that was assigned for a particular Distribution Log entry.</description>
        <inlineHelpText>Name of the type of SObject that was assigned for a particular Distribution Log entry.</inlineHelpText>
        <label>Assigned Object Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AMX_Distribution_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Record_ID__c</fullName>
        <description>The ID of the record that was assigned by the AMX Distribution Engine.</description>
        <label>Assigned Record ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Record_Name__c</fullName>
        <description>Stores the record name of the distributed object.  For objects that don&apos;t have name fields (like the Case object), this field will store a text version of the Record ID.</description>
        <inlineHelpText>Stores the record name of the distributed object.  For objects that don&apos;t have name fields (like the Case object), this field will store a text version of the Record ID.</inlineHelpText>
        <label>Assigned Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignment_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Date and time that the particular record that this log entry refers to was assigned to a Distribution Team member.</description>
        <label>Assignment Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Case object. This enables tighter integration between Case detail screens and historical AMX assignment / distribution information.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>AMX_Distribution_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distributor_Name__c</fullName>
        <description>Name of the Distributor</description>
        <label>Distributor Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Special lookup to the Lead object. This enables tighter integration between Lead detail screens and historical AMX assignment / distribution information.</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>AMX_Distribution_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Special lookup to the Opportunity object. This enables tighter integration between Opportunity detail screens and historical AMX assignment / distribution information.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>AMX_Distribution_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Assignment_Date__c</columns>
        <columns>Assigned_Object_Type__c</columns>
        <columns>Assigned_Record_Name__c</columns>
        <columns>AMX_Distributor__c</columns>
        <columns>Assigned_Owner__c</columns>
        <columns>Assigned_Record_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Canada_QBO_Trials</fullName>
        <columns>NAME</columns>
        <columns>Assignment_Date__c</columns>
        <columns>Assigned_Object_Type__c</columns>
        <columns>Assigned_Record_Name__c</columns>
        <columns>AMX_Distributor__c</columns>
        <columns>Assigned_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AMX_Distributor__c</field>
            <operation>equals</operation>
            <value>Canada QBO Trials</value>
        </filters>
        <label>Canada QBO Trials</label>
    </listViews>
    <listViews>
        <fullName>Canada_QBO_Trials1</fullName>
        <columns>NAME</columns>
        <columns>Assignment_Date__c</columns>
        <columns>Assigned_Object_Type__c</columns>
        <columns>Assigned_Record_Name__c</columns>
        <columns>AMX_Distributor__c</columns>
        <columns>Assigned_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AMX_Distributor__c</field>
            <operation>equals</operation>
            <value>Hot Opptys</value>
        </filters>
        <label>Hot Opptys</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Filter_by_Assigned_Record_ID</fullName>
        <columns>NAME</columns>
        <columns>Assignment_Date__c</columns>
        <columns>Assigned_Object_Type__c</columns>
        <columns>Assigned_Record_Name__c</columns>
        <columns>AMX_Distributor__c</columns>
        <columns>Assigned_Owner__c</columns>
        <columns>Assigned_Record_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_Record_ID__c</field>
            <operation>startsWith</operation>
            <value>006i000000Ye7mp</value>
        </filters>
        <label>Filter by Assigned Record ID</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>UK_Telesales_QBO_Trials</fullName>
        <columns>NAME</columns>
        <columns>Assignment_Date__c</columns>
        <columns>Assigned_Object_Type__c</columns>
        <columns>Assigned_Record_Name__c</columns>
        <columns>AMX_Distributor__c</columns>
        <columns>Assigned_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AMX_Distributor__c</field>
            <operation>contains</operation>
            <value>UK Telesales</value>
        </filters>
        <filters>
            <field>Assignment_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>UK Telesales QBO Trials</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>US_Accountant_Expansion_Team_Spanish</fullName>
        <columns>NAME</columns>
        <columns>Assigned_Owner__c</columns>
        <columns>Assignment_Date__c</columns>
        <columns>Distributor_Name__c</columns>
        <columns>Opportunity__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Distributor_Name__c</field>
            <operation>equals</operation>
            <value>US Accountant Expansion Team Spanish</value>
        </filters>
        <label>US Accountant Expansion Team Spanish</label>
        <language>en_US</language>
        <sharedTo>
            <group>Audrey_Craig</group>
            <role>Admin</role>
            <roleAndSubordinates>Accountant_Phone_Sales_Mgr</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>US_Accountant_Team_Intl_QBES_Oppty_Pass</fullName>
        <columns>NAME</columns>
        <columns>Assigned_Owner__c</columns>
        <columns>Assignment_Date__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Distributor_Name__c</field>
            <operation>equals</operation>
            <value>Accountant Expansion International QBES</value>
        </filters>
        <label>US Accountant Team Intl QBES Oppty Pass</label>
        <language>en_US</language>
        <sharedTo>
            <role>Admin</role>
            <roleAndSubordinates>Accountant_Phone_Sales_Mgr</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>US_Accountant_Team_Intl_QBES_Oppty_Pass1</fullName>
        <columns>NAME</columns>
        <columns>Assigned_Owner__c</columns>
        <columns>Assignment_Date__c</columns>
        <columns>Distributor_Name__c</columns>
        <columns>Opportunity__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Distributor_Name__c</field>
            <operation>contains</operation>
            <value>US Accountant Expansion Team ES</value>
        </filters>
        <label>US Accountant Expansion Team QBES</label>
        <language>en_US</language>
        <sharedTo>
            <group>Audrey_Craig</group>
            <role>Admin</role>
            <roleAndSubordinates>Accountant_Phone_Sales_Mgr</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>US_Accoutant_Payroll_Sales_Oppty_Pass_Lo</fullName>
        <columns>NAME</columns>
        <columns>Assigned_Owner__c</columns>
        <columns>Assignment_Date__c</columns>
        <columns>Distributor_Name__c</columns>
        <columns>Opportunity__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Distributor_Name__c</field>
            <operation>equals</operation>
            <value>Accountant Payroll Distributor</value>
        </filters>
        <label>Accountant Payroll Sales Oppty Distro</label>
        <language>en_US</language>
        <sharedTo>
            <group>Audrey_Craig</group>
            <role>Accountant_Phone_Sales_Mgr</role>
            <role>Acctnt_Inbound_Consultant</role>
        </sharedTo>
    </listViews>
</CustomObject>